--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,12 +5,9 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.9e06009f.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.edb8bd41.js">
-    <link rel="stylesheet" href="/assets/vendor.4eeb6cee.css">
   </head>
   <body>
     <div id="app"></div>
-    
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
